--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ coverage
 .grunt
 
 # Bower dependency directory (https://bower.io/)
-bower_components
+bower_components/Users/conghoang/Personal/sample/Llamaindex/main.py /Users/conghoang/Personal/sample/Llamaindex/Pipfile /Users/conghoang/Personal/sample/Llamaindex/Pipfile.lock
 
 # node-waf configuration
 .lock-wscript
@@ -73,7 +73,6 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
 .env.development.local
 .env.test.local
 .env.production.local
